<resources>
    <string name="service_is_not_responding">Сервис в данный момент не доступен</string>
    <string name="app_name">ModellingInfo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная</string>
    <string name="favourite">Избранное</string>
    <string name="modelling_for_games">3D моделирование\nдля видеоигр</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="blocking">Блокинг</string>
    <string name="language">Язык</string>
    <string name="interface_str">Интерфейс</string>
    <string name="account">Аккаунт</string>
    <string name="text_size">Размер текста статьи</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="color_theme">Цветовая схема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="notification_sound">Уведомления и звук</string>
    <string name="notification">Уведомления</string>
    <string name="sound">Звук</string>
    <string name="nickname">Nickname</string>
    <string name="two_lines">Тут бует 2 строки\nдля проверка</string>
    <string name="tiny">Мелкий</string>
    <string name="medium">Средний</string>
    <string name="big">Большой</string>
    <string name="no_favourite_items_yet">В избранном пока ничего нет</string>
    <string name="to_main_page">На главную</string>
    <string name="enter_at_least_two_symbols">Введите хотя бы 2 символа…</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="find">Найти</string>
    <string name="logIn">Войти</string>
    <string name="logOut">Выйти</string>
    <string-array name="theme_titles">
        <item>Драфт</item>
        <item>Сетка</item>
        <item>Развертка</item>
        <item>Запечка</item>
        <item>Текстуры</item>
    </string-array>
    <string-array name="article_titles_1">
        <item>Общая информация</item>
        <item>Референсы</item>
        <item>Анализ модели</item>
        <item>Блокинг</item>
        <item>Детализация</item>
        <item>Покраска драфта цветом</item>
        <item>Частые ошибки</item>
    </string-array>
    <string-array name="article_titles_2">
        <item>Общая информация</item>
        <item>Low Poly</item>
        <item>High Poly</item>
        <item>Mid Poly</item>
    </string-array>
    <string-array name="article_titles_3">
        <item>UV развертка</item>
        <item>Уникальный маппинг</item>
        <item>Тайловый маппинг</item>
        <item>Атлас</item>
        <item>Частые ошибки</item>
    </string-array>
    <string-array name="article_titles_4">
        <item>Общая информация</item>
        <item>Подготовка</item>
        <item>Normal map</item>
        <item>Ambient Occlusion</item>
        <item>Color ID</item>
        <item>Артефакты</item>
    </string-array>
    <string-array name="article_titles_5">
        <item>Создание материала</item>
        <item>PBR</item>
    </string-array>
</resources>