<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_back"
    tools:context=".main_menu.settings.SettingFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_night" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="47dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="11dp">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/circle_image_bg"
                    android:src="@drawable/ic_user_image" />

                <TextView
                    android:id="@+id/user_nickname"
                    style="@style/NicknameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/nickname"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/secondary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:paddingHorizontal="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/account_title"
                    style="@style/SettingsTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/interface_str"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_size_subtitle"
                        style="@style/SettingsTextSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/text_size"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/text_size_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_size_small"
                                style="@style/RadioButtonText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:checked="false"
                                android:layoutDirection="rtl"
                                android:minHeight="10dp"
                                android:text="@string/tiny"
                                android:textColor="@color/white" />

                            <RadioButton
                                android:id="@+id/radio_size_medium"
                                style="@style/RadioButtonText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:checked="true"
                                android:layoutDirection="rtl"
                                android:minHeight="10dp"
                                android:text="@string/medium"
                                android:textColor="@color/white" />

                            <RadioButton
                                android:id="@+id/radio_size_big"
                                style="@style/RadioButtonText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:checked="false"
                                android:layoutDirection="rtl"
                                android:minHeight="10dp"
                                android:text="@string/big"
                                android:textColor="@color/white" />

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/language_selector"
                        style="@style/SettingsTextSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/language"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/language_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_russian"
                            style="@style/RadioButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:checked="true"
                            android:layoutDirection="rtl"
                            android:minHeight="10dp"
                            android:text="@string/russian"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/radio_english"
                            style="@style/RadioButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layoutDirection="rtl"
                            android:minHeight="10dp"
                            android:text="@string/english"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/color_theme"
                        style="@style/SettingsTextSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/color_theme"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/color_theme_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_dark_theme"
                            style="@style/RadioButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:checked="true"
                            android:layoutDirection="rtl"
                            android:minHeight="14dp"
                            android:text="@string/dark_theme"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/radio_light_theme"
                            style="@style/RadioButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layoutDirection="rtl"
                            android:minHeight="14dp"
                            android:text="@string/light_theme"
                            android:textColor="@color/white" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/notifications_sound"
                        style="@style/SettingsTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_sound"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/notification_switch_title"
                            style="@style/RadioButtonText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/notification"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/notification_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="25dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/sound_switch_title"
                            style="@style/RadioButtonText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sound"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/sound_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="25dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>

